# wm_face_analyzer

./: CMakeLists.txt  PlottingImageListener.h  README.md  StatusListener.h  main.cpp
Javascript example/: affdex.js  index.html  test_video.html
